[package]
name = "watson"
description = "Search for accounts across social media platforms by username"
version = "0.1.0"
edition = "2021"
authors = [ "Wren Morozova <siliconself@proton.me> "]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
missing_abi = "warn"
missing_docs = "warn"
noop_method_call = "warn"
pointer_structural_match = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"

[workspace.lints.clippy]
pedantic = "warn"
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_docs_in_private_items = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
# wildcard_dependencies = "warn" -- Commented this out because it's hallucinating

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
once_cell = "1.19.0"
phf = "0.11.2"
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["gzip"] }
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
phf_codegen = "0.11.2"
serde = { verison = "1.0", features = ["derive"] }
serde_json = "1.0"
slugify = "0.1.0"
